platform/tenant-template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    dynstore.io/tenant: "__TENANT__"
    dynstore.io/app: "__APP__"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
